systemd (215-2) UNRELEASED; urgency=medium

  * debian/patches/always-check-for-__BYTE_ORDER-__BIG_ENDIAN-when-chec.patch
    + Added. Fix checking of system endianess. Fixes FTBFS on powerpc
  * debian/patches/timesyncd-when-we-don-t-know-anything-about-the-netw.patch:
    + Let timesyncd go online even if networkd isn't running (from upstream
      git) (Closes: #760087)

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 07 Sep 2014 17:15:46 +0200

systemd (215-1) experimental; urgency=medium

  * New upstream release.
  * Import upstream v215-stable patch series.
  * Rebase remaining Debian patches on top of v215-stable.
  * Drop our Debian-specific run-user.mount unit as upstream now creates a
    per-user tmpfs via logind.
  * Don't rely on new mount from experimental for now and re-add the patch
    which updates the documentation accordingly.
  * Cherry-pick upstream fix to use correct versions for the new symbols that
    were introduced in libudev.
  * Update symbols files
    - Add two new symbols for libudev1.
    - Remove private symbol from libgudev-1.0-0. This symbol was never part of
      the public API and not used anywhere so we don't need a soname bump.
  * Cherry-pick upstream commit to not install busname units if kdbus support
    is disabled.
  * Make /run/lock tmpfs an API fs so it is available during early boot.
    (Closes: #751392)
  * Install new systemd-path and systemd-escape binaries.
  * Cherry-pick upstream commit which fixes the references to the systemctl
    man page. (Closes: #760613)
  * Use the new systemd-escape utility to properly escape the network
    interface name when starting an ifup@.service instance for hotplugged
    network interfaces. Make sure a recent enough systemd version is installed
    by bumping the versioned Breaks accordingly. (Closes: #747044)
  * Order ifup@.service after networking.service so we don't need to setup the
    runtime directory ourselves and we have a defined point during boot when